AC_PREREQ([2.69])

AC_INIT([sokoban], [1.0], [gzc@caculli.it])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

AM_PROG_AR
LT_PREREQ([2.4.6])
LT_INIT([dlopen])

AC_LANG([C++])

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Check for Programs
AC_PROG_CXX
AC_PROG_INSTALL

# Enforce C++11
AX_CXX_COMPILE_STDCXX([11], [noext], [mandatory])

# Check for libraries
AC_SEARCH_LIBS([pthread_create], [pthread])
AX_BOOST_BASE([1.76])
AX_BOOST_SYSTEM
AX_BOOST_FILESYSTEM
AX_BOOST_DATE_TIME
AX_BOOST_LOG
AX_BOOST_LOG_SETUP
AX_BOOST_LOCALE
AX_BOOST_THREAD
PKG_CHECK_MODULES([SDL2], [sdl2 >= 2.0.16])
PKG_CHECK_MODULES([SDL2_GFX], [SDL2_gfx >= 1.0.2])
PKG_CHECK_MODULES([SDL2_Image], [SDL2_image >= 2.0.6])
PKG_CHECK_MODULES([SDL2_Mixer], [SDL2_mixer >= 2.0.4])
PKG_CHECK_MODULES([SDL2_Net], [SDL2_net >= 2.0.1])
PKG_CHECK_MODULES([SDL2_TTF], [SDL2_ttf >= 2.0.15])

# Check for header files
AC_CHECK_HEADERS([
    math.h
    stdlib.h
    pthread.h
])

# Check for typedefs, structures and compiler characteristics

# Check for library functions
    #src/util/Makefile
    #src/ui/gui/entities/Makefile
    #src/ui/gui/components/Makefile
    #src/ui/gui/states/Makefile
    #src/ui/gui/Makefile
    #src/ui/Makefile
AC_CONFIG_FILES([
    src/core/Makefile
    src/Makefile
    Makefile
])

AC_CONFIG_LINKS([
    assets/levels/00.lvl:src/assets/levels/00.lvl
    assets/levels/01.lvl:src/assets/levels/01.lvl
    assets/levels/02.lvl:src/assets/levels/02.lvl
    assets/levels/03.lvl:src/assets/levels/03.lvl
    assets/levels/04.lvl:src/assets/levels/04.lvl
    assets/levels/05.lvl:src/assets/levels/05.lvl
    assets/levels/06.lvl:src/assets/levels/06.lvl
    assets/levels/07.lvl:src/assets/levels/07.lvl
    assets/levels/08.lvl:src/assets/levels/08.lvl
    assets/levels/09.lvl:src/assets/levels/09.lvl
    assets/levels/10.lvl:src/assets/levels/10.lvl
    assets/levels/11.lvl:src/assets/levels/11.lvl
    assets/levels/12.lvl:src/assets/levels/12.lvl
    assets/levels/13.lvl:src/assets/levels/13.lvl
    assets/levels/14.lvl:src/assets/levels/14.lvl
    assets/levels/15.lvl:src/assets/levels/15.lvl
    assets/levels/16.lvl:src/assets/levels/16.lvl
    assets/levels/17.lvl:src/assets/levels/17.lvl
    assets/levels/18.lvl:src/assets/levels/18.lvl
    assets/levels/19.lvl:src/assets/levels/19.lvl
    assets/levels/20.lvl:src/assets/levels/20.lvl
    assets/levels/21.lvl:src/assets/levels/21.lvl
    assets/levels/22.lvl:src/assets/levels/22.lvl
    assets/levels/23.lvl:src/assets/levels/23.lvl
    assets/levels/24.lvl:src/assets/levels/24.lvl
    assets/levels/25.lvl:src/assets/levels/25.lvl
    assets/levels/26.lvl:src/assets/levels/26.lvl
    assets/music/Field_-_Desolate_Domain.ogg:src/assets/music/Field_-_Desolate_Domain.ogg
    assets/music/Field_-_Golden_Harvest.ogg:src/assets/music/Field_-_Golden_Harvest.ogg
    assets/music/Field_-_Greatest_Nation.ogg:src/assets/music/Field_-_Greatest_Nation.ogg
    assets/music/Field_-_Hades_Holiday.ogg:src/assets/music/Field_-_Hades_Holiday.ogg
    assets/music/Field_-_Homeland_Return.ogg:src/assets/music/Field_-_Homeland_Return.ogg
    assets/music/Field_-_Shattered_Lands.ogg:src/assets/music/Field_-_Shattered_Lands.ogg
    assets/music/Theme_-_Courting_The_Princess.ogg:src/assets/music/Theme_-_Courting_The_Princess.ogg
    assets/music/Theme_-_Festival_Fun.ogg:src/assets/music/Theme_-_Festival_Fun.ogg
    assets/music/Theme_-_Funeral_March.ogg:src/assets/music/Theme_-_Funeral_March.ogg
    assets/music/Theme_-_Tournament_Time.ogg:src/assets/music/Theme_-_Tournament_Time.ogg
    assets/music/Town_-_Childhood_Home.ogg:src/assets/music/Town_-_Childhood_Home.ogg
    assets/music/Town_-_Fancy_Castle.ogg:src/assets/music/Town_-_Fancy_Castle.ogg
    assets/music/Town_-_Little_Village.ogg:src/assets/music/Town_-_Little_Village.ogg
    assets/music/Town_-_Nice_Day_Out.ogg:src/assets/music/Town_-_Nice_Day_Out.ogg
    assets/music/Town_-_Old_Palace.ogg:src/assets/music/Town_-_Old_Palace.ogg
    assets/music/Town_-_Peaceful_Place.ogg:src/assets/music/Town_-_Peaceful_Place.ogg
    assets/music/Town_-_Pleasant_Peasants.ogg:src/assets/music/Town_-_Pleasant_Peasants.ogg
    assets/music/Town_-_Shop_Hopping.ogg:src/assets/music/Town_-_Shop_Hopping.ogg
    assets/music/Town_-_Spooky_Manor.ogg:src/assets/music/Town_-_Spooky_Manor.ogg
    assets/music/Town_-_Tavern_Tune.ogg:src/assets/music/Town_-_Tavern_Tune.ogg
    assets/sounds/air_pump_01.ogg:src/assets/sounds/air_pump_01.ogg
    assets/sounds/air_pump_02.ogg:src/assets/sounds/air_pump_02.ogg
    assets/sounds/air_pump_03.ogg:src/assets/sounds/air_pump_03.ogg
    assets/sounds/air_pump_LOOP.ogg:src/assets/sounds/air_pump_LOOP.ogg
    assets/sounds/bag_chips_rustle_01.ogg:src/assets/sounds/bag_chips_rustle_01.ogg
    assets/sounds/bag_chips_rustle_02.ogg:src/assets/sounds/bag_chips_rustle_02.ogg
    assets/sounds/bag_paper_rustle_01.ogg:src/assets/sounds/bag_paper_rustle_01.ogg
    assets/sounds/bag_paper_rustle_02.ogg:src/assets/sounds/bag_paper_rustle_02.ogg
    assets/sounds/bag_plastic_rustle_01.ogg:src/assets/sounds/bag_plastic_rustle_01.ogg
    assets/sounds/bag_plastic_rustle_02.ogg:src/assets/sounds/bag_plastic_rustle_02.ogg
    assets/sounds/bag_plastic_rustle_03.ogg:src/assets/sounds/bag_plastic_rustle_03.ogg
    assets/sounds/bang_fist_on_table_01.ogg:src/assets/sounds/bang_fist_on_table_01.ogg
    assets/sounds/bang_fist_on_table_02.ogg:src/assets/sounds/bang_fist_on_table_02.ogg
    assets/sounds/bang_fist_on_table_03.ogg:src/assets/sounds/bang_fist_on_table_03.ogg
    assets/sounds/beep_01.ogg:src/assets/sounds/beep_01.ogg
    assets/sounds/beep_alarm_clock.ogg:src/assets/sounds/beep_alarm_clock.ogg
    assets/sounds/bell_sleigh_01.ogg:src/assets/sounds/bell_sleigh_01.ogg
    assets/sounds/bell_sleigh_02.ogg:src/assets/sounds/bell_sleigh_02.ogg
    assets/sounds/bell_small_01.ogg:src/assets/sounds/bell_small_01.ogg
    assets/sounds/bell_small_02.ogg:src/assets/sounds/bell_small_02.ogg
    assets/sounds/bell_small_03.ogg:src/assets/sounds/bell_small_03.ogg
    assets/sounds/bird_call_01.ogg:src/assets/sounds/bird_call_01.ogg
    assets/sounds/bird_call_02.ogg:src/assets/sounds/bird_call_02.ogg
    assets/sounds/bird_single_01.ogg:src/assets/sounds/bird_single_01.ogg
    assets/sounds/bird_single_02.ogg:src/assets/sounds/bird_single_02.ogg
    assets/sounds/bird_single_03.ogg:src/assets/sounds/bird_single_03.ogg
    assets/sounds/birds_LOOP_01.ogg:src/assets/sounds/birds_LOOP_01.ogg
    assets/sounds/birds_LOOP_02.ogg:src/assets/sounds/birds_LOOP_02.ogg
    assets/sounds/birds_LOOP_03.ogg:src/assets/sounds/birds_LOOP_03.ogg
    assets/sounds/birds_LOOP_04.ogg:src/assets/sounds/birds_LOOP_04.ogg
    assets/sounds/blinds_raise_01.ogg:src/assets/sounds/blinds_raise_01.ogg
    assets/sounds/blinds_raise_02.ogg:src/assets/sounds/blinds_raise_02.ogg
    assets/sounds/book_close_01.ogg:src/assets/sounds/book_close_01.ogg
    assets/sounds/book_close_02.ogg:src/assets/sounds/book_close_02.ogg
    assets/sounds/book_close_03.ogg:src/assets/sounds/book_close_03.ogg
    assets/sounds/book_open_01.ogg:src/assets/sounds/book_open_01.ogg
    assets/sounds/book_open_02.ogg:src/assets/sounds/book_open_02.ogg
    assets/sounds/book_page_turn_01.ogg:src/assets/sounds/book_page_turn_01.ogg
    assets/sounds/book_page_turn_02.ogg:src/assets/sounds/book_page_turn_02.ogg
    assets/sounds/box_cardboard_cut_open_01.ogg:src/assets/sounds/box_cardboard_cut_open_01.ogg
    assets/sounds/box_cardboard_cut_open_02.ogg:src/assets/sounds/box_cardboard_cut_open_02.ogg
    assets/sounds/box_cardboard_cut_open_03.ogg:src/assets/sounds/box_cardboard_cut_open_03.ogg
    assets/sounds/box_cardboard_open_01.ogg:src/assets/sounds/box_cardboard_open_01.ogg
    assets/sounds/box_cardboard_open_02.ogg:src/assets/sounds/box_cardboard_open_02.ogg
    assets/sounds/box_cardboard_open_03.ogg:src/assets/sounds/box_cardboard_open_03.ogg
    assets/sounds/button_beep_01.ogg:src/assets/sounds/button_beep_01.ogg
    assets/sounds/button_beep_02.ogg:src/assets/sounds/button_beep_02.ogg
    assets/sounds/button_click_01.ogg:src/assets/sounds/button_click_01.ogg
    assets/sounds/button_click_02.ogg:src/assets/sounds/button_click_02.ogg
    assets/sounds/button_click_03.ogg:src/assets/sounds/button_click_03.ogg
    assets/sounds/button_pop_01.ogg:src/assets/sounds/button_pop_01.ogg
    assets/sounds/button_pop_02.ogg:src/assets/sounds/button_pop_02.ogg
    assets/sounds/button_switch_01.ogg:src/assets/sounds/button_switch_01.ogg
    assets/sounds/button_switch_02.ogg:src/assets/sounds/button_switch_02.ogg
    assets/sounds/buzz_fluorescent_light.ogg:src/assets/sounds/buzz_fluorescent_light.ogg
    assets/sounds/camera_flash_powerup.ogg:src/assets/sounds/camera_flash_powerup.ogg
    assets/sounds/camera_shutter_old_01.ogg:src/assets/sounds/camera_shutter_old_01.ogg
    assets/sounds/camera_shutter_old_02.ogg:src/assets/sounds/camera_shutter_old_02.ogg
    assets/sounds/camera_shutter_old_03.ogg:src/assets/sounds/camera_shutter_old_03.ogg
    assets/sounds/cap_medium_open.ogg:src/assets/sounds/cap_medium_open.ogg
    assets/sounds/cap_screw_open.ogg:src/assets/sounds/cap_screw_open.ogg
    assets/sounds/cap_small_open.ogg:src/assets/sounds/cap_small_open.ogg
    assets/sounds/cards_deal_x7.ogg:src/assets/sounds/cards_deal_x7.ogg
    assets/sounds/cards_deck_tap.ogg:src/assets/sounds/cards_deck_tap.ogg
    assets/sounds/card_single_flip_01.ogg:src/assets/sounds/card_single_flip_01.ogg
    assets/sounds/card_single_flip_02.ogg:src/assets/sounds/card_single_flip_02.ogg
    assets/sounds/card_single_flip_03.ogg:src/assets/sounds/card_single_flip_03.ogg
    assets/sounds/card_single_flip_04.ogg:src/assets/sounds/card_single_flip_04.ogg
    assets/sounds/cards_shuffle_01.ogg:src/assets/sounds/cards_shuffle_01.ogg
    assets/sounds/cards_shuffle_02.ogg:src/assets/sounds/cards_shuffle_02.ogg
    assets/sounds/cards_shuffle_03.ogg:src/assets/sounds/cards_shuffle_03.ogg
    assets/sounds/cards_shuffle_bridge_01.ogg:src/assets/sounds/cards_shuffle_bridge_01.ogg
    assets/sounds/cards_shuffle_bridge_02.ogg:src/assets/sounds/cards_shuffle_bridge_02.ogg
    assets/sounds/cards_shuffle_bridge_03.ogg:src/assets/sounds/cards_shuffle_bridge_03.ogg
    assets/sounds/chair_creak_01.ogg:src/assets/sounds/chair_creak_01.ogg
    assets/sounds/chair_creak_02.ogg:src/assets/sounds/chair_creak_02.ogg
    assets/sounds/chair_creak_03.ogg:src/assets/sounds/chair_creak_03.ogg
    assets/sounds/chair_wheeled_rolling_01.ogg:src/assets/sounds/chair_wheeled_rolling_01.ogg
    assets/sounds/chair_wheeled_rolling_02.ogg:src/assets/sounds/chair_wheeled_rolling_02.ogg
    assets/sounds/cicadas_LOOP_01.ogg:src/assets/sounds/cicadas_LOOP_01.ogg
    assets/sounds/cicadas_LOOP_02.ogg:src/assets/sounds/cicadas_LOOP_02.ogg
    assets/sounds/clothes_on_01.ogg:src/assets/sounds/clothes_on_01.ogg
    assets/sounds/clothes_pants_on_01.ogg:src/assets/sounds/clothes_pants_on_01.ogg
    assets/sounds/clothes_pants_on_02.ogg:src/assets/sounds/clothes_pants_on_02.ogg
    assets/sounds/clothes_shirt_on_01.ogg:src/assets/sounds/clothes_shirt_on_01.ogg
    assets/sounds/clothes_shirt_on_02.ogg:src/assets/sounds/clothes_shirt_on_02.ogg
    assets/sounds/cloth_rustle_01.ogg:src/assets/sounds/cloth_rustle_01.ogg
    assets/sounds/cloth_rustle_02.ogg:src/assets/sounds/cloth_rustle_02.ogg
    assets/sounds/cloth_rustle_03.ogg:src/assets/sounds/cloth_rustle_03.ogg
    assets/sounds/cloth_rustle_04.ogg:src/assets/sounds/cloth_rustle_04.ogg
    assets/sounds/cloth_rustle_05.ogg:src/assets/sounds/cloth_rustle_05.ogg
    assets/sounds/coin_single_fall_01.ogg:src/assets/sounds/coin_single_fall_01.ogg
    assets/sounds/coin_single_fall_02.ogg:src/assets/sounds/coin_single_fall_02.ogg
    assets/sounds/coins_jingle_01.ogg:src/assets/sounds/coins_jingle_01.ogg
    assets/sounds/coins_jingle_02.ogg:src/assets/sounds/coins_jingle_02.ogg
    assets/sounds/coins_jingle_03.ogg:src/assets/sounds/coins_jingle_03.ogg
    assets/sounds/coins_jingle_04.ogg:src/assets/sounds/coins_jingle_04.ogg
    assets/sounds/computer_instant_message_alert_01.ogg:src/assets/sounds/computer_instant_message_alert_01.ogg
    assets/sounds/computer_instant_message_alert_02.ogg:src/assets/sounds/computer_instant_message_alert_02.ogg
    assets/sounds/computer_instant_message_alert_03.ogg:src/assets/sounds/computer_instant_message_alert_03.ogg
    assets/sounds/computer_OS_exit_01.ogg:src/assets/sounds/computer_OS_exit_01.ogg
    assets/sounds/computer_OS_exit_02.ogg:src/assets/sounds/computer_OS_exit_02.ogg
    assets/sounds/computer_OS_welcome_01.ogg:src/assets/sounds/computer_OS_welcome_01.ogg
    assets/sounds/computer_OS_welcome_02.ogg:src/assets/sounds/computer_OS_welcome_02.ogg
    assets/sounds/computer_OS_welcome_03.ogg:src/assets/sounds/computer_OS_welcome_03.ogg
    assets/sounds/computer_startup_01.ogg:src/assets/sounds/computer_startup_01.ogg
    assets/sounds/computer_typing_01.ogg:src/assets/sounds/computer_typing_01.ogg
    assets/sounds/computer_typing_02.ogg:src/assets/sounds/computer_typing_02.ogg
    assets/sounds/computer_typing_03.ogg:src/assets/sounds/computer_typing_03.ogg
    assets/sounds/cooking_frying_sizzle_LOOP.ogg:src/assets/sounds/cooking_frying_sizzle_LOOP.ogg
    assets/sounds/cooking_microwave.ogg:src/assets/sounds/cooking_microwave.ogg
    assets/sounds/cooking_oven_burner_ignite.ogg:src/assets/sounds/cooking_oven_burner_ignite.ogg
    assets/sounds/cooking_oven_door_close.ogg:src/assets/sounds/cooking_oven_door_close.ogg
    assets/sounds/cooking_pans_01.ogg:src/assets/sounds/cooking_pans_01.ogg
    assets/sounds/cooking_pans_02.ogg:src/assets/sounds/cooking_pans_02.ogg
    assets/sounds/cooking_pans_03.ogg:src/assets/sounds/cooking_pans_03.ogg
    assets/sounds/cooking_pans_04.ogg:src/assets/sounds/cooking_pans_04.ogg
    assets/sounds/cooking_pan_stirring_sauce_01.ogg:src/assets/sounds/cooking_pan_stirring_sauce_01.ogg
    assets/sounds/cooking_pan_stirring_sauce_02.ogg:src/assets/sounds/cooking_pan_stirring_sauce_02.ogg
    assets/sounds/cooking_pan_stirring_sauce_03.ogg:src/assets/sounds/cooking_pan_stirring_sauce_03.ogg
    assets/sounds/cooking_pan_stirring_sauce_LOOP.ogg:src/assets/sounds/cooking_pan_stirring_sauce_LOOP.ogg
    assets/sounds/cooking_silverware_clanks_01.ogg:src/assets/sounds/cooking_silverware_clanks_01.ogg
    assets/sounds/cooking_silverware_clanks_02.ogg:src/assets/sounds/cooking_silverware_clanks_02.ogg
    assets/sounds/cooking_silverware_clanks_03.ogg:src/assets/sounds/cooking_silverware_clanks_03.ogg
    assets/sounds/cooking_silverware_clanks_04.ogg:src/assets/sounds/cooking_silverware_clanks_04.ogg
    assets/sounds/cooking_silverware_on_plate.ogg:src/assets/sounds/cooking_silverware_on_plate.ogg
    assets/sounds/cooking_spray_oil.ogg:src/assets/sounds/cooking_spray_oil.ogg
    assets/sounds/cooking_spray_oil_S.ogg:src/assets/sounds/cooking_spray_oil_S.ogg
    assets/sounds/cooking_toaster_springs.ogg:src/assets/sounds/cooking_toaster_springs.ogg
    assets/sounds/cooking_water_boiling_LOOP.ogg:src/assets/sounds/cooking_water_boiling_LOOP.ogg
    assets/sounds/curtains_open_01.ogg:src/assets/sounds/curtains_open_01.ogg
    assets/sounds/curtains_open_02.ogg:src/assets/sounds/curtains_open_02.ogg
    assets/sounds/dice_roll_01.ogg:src/assets/sounds/dice_roll_01.ogg
    assets/sounds/dice_roll_02.ogg:src/assets/sounds/dice_roll_02.ogg
    assets/sounds/dice_roll_03.ogg:src/assets/sounds/dice_roll_03.ogg
    assets/sounds/dice_shake_01.ogg:src/assets/sounds/dice_shake_01.ogg
    assets/sounds/dog_bark_01.ogg:src/assets/sounds/dog_bark_01.ogg
    assets/sounds/dog_bark_02.ogg:src/assets/sounds/dog_bark_02.ogg
    assets/sounds/dog_bark_small_01.ogg:src/assets/sounds/dog_bark_small_01.ogg
    assets/sounds/dog_bark_small_02.ogg:src/assets/sounds/dog_bark_small_02.ogg
    assets/sounds/dog_bark_small_03.ogg:src/assets/sounds/dog_bark_small_03.ogg
    assets/sounds/dog_pant_01.ogg:src/assets/sounds/dog_pant_01.ogg
    assets/sounds/dog_pant_02.ogg:src/assets/sounds/dog_pant_02.ogg
    assets/sounds/dog_sniff.ogg:src/assets/sounds/dog_sniff.ogg
    assets/sounds/dog_snort.ogg:src/assets/sounds/dog_snort.ogg
    assets/sounds/door_cabinet_01.ogg:src/assets/sounds/door_cabinet_01.ogg
    assets/sounds/door_cabinet_02.ogg:src/assets/sounds/door_cabinet_02.ogg
    assets/sounds/door_cabinet_03.ogg:src/assets/sounds/door_cabinet_03.ogg
    assets/sounds/door_cabinet_metal_01.ogg:src/assets/sounds/door_cabinet_metal_01.ogg
    assets/sounds/door_cabinet_squeak_01.ogg:src/assets/sounds/door_cabinet_squeak_01.ogg
    assets/sounds/door_cabinet_squeak_02.ogg:src/assets/sounds/door_cabinet_squeak_02.ogg
    assets/sounds/door_close_01.ogg:src/assets/sounds/door_close_01.ogg
    assets/sounds/door_close_02.ogg:src/assets/sounds/door_close_02.ogg
    assets/sounds/door_close_03.ogg:src/assets/sounds/door_close_03.ogg
    assets/sounds/door_close_04.ogg:src/assets/sounds/door_close_04.ogg
    assets/sounds/door_creak_01.ogg:src/assets/sounds/door_creak_01.ogg
    assets/sounds/door_creak_02.ogg:src/assets/sounds/door_creak_02.ogg
    assets/sounds/door_creak_03.ogg:src/assets/sounds/door_creak_03.ogg
    assets/sounds/door_creak_04.ogg:src/assets/sounds/door_creak_04.ogg
    assets/sounds/door_hatch_01.ogg:src/assets/sounds/door_hatch_01.ogg
    assets/sounds/door_knock_01.ogg:src/assets/sounds/door_knock_01.ogg
    assets/sounds/door_knock_02.ogg:src/assets/sounds/door_knock_02.ogg
    assets/sounds/door_lock_01.ogg:src/assets/sounds/door_lock_01.ogg
    assets/sounds/door_lock_02.ogg:src/assets/sounds/door_lock_02.ogg
    assets/sounds/door_lock_03.ogg:src/assets/sounds/door_lock_03.ogg
    assets/sounds/door_lock_04.ogg:src/assets/sounds/door_lock_04.ogg
    assets/sounds/door_metal_01.ogg:src/assets/sounds/door_metal_01.ogg
    assets/sounds/door_metal_02.ogg:src/assets/sounds/door_metal_02.ogg
    assets/sounds/door_open_01.ogg:src/assets/sounds/door_open_01.ogg
    assets/sounds/door_open_02.ogg:src/assets/sounds/door_open_02.ogg
    assets/sounds/door_sliding.ogg:src/assets/sounds/door_sliding.ogg
    assets/sounds/drawer_close_01.ogg:src/assets/sounds/drawer_close_01.ogg
    assets/sounds/drawer_close_02.ogg:src/assets/sounds/drawer_close_02.ogg
    assets/sounds/drawer_close_03.ogg:src/assets/sounds/drawer_close_03.ogg
    assets/sounds/drawer_close_04.ogg:src/assets/sounds/drawer_close_04.ogg
    assets/sounds/drawer_close_05.ogg:src/assets/sounds/drawer_close_05.ogg
    assets/sounds/drawer_close_hard.ogg:src/assets/sounds/drawer_close_hard.ogg
    assets/sounds/drawer_metal.ogg:src/assets/sounds/drawer_metal.ogg
    assets/sounds/drawer_open_01.ogg:src/assets/sounds/drawer_open_01.ogg
    assets/sounds/drawer_open_02.ogg:src/assets/sounds/drawer_open_02.ogg
    assets/sounds/drawer_open_03.ogg:src/assets/sounds/drawer_open_03.ogg
    assets/sounds/drawer_open_04.ogg:src/assets/sounds/drawer_open_04.ogg
    assets/sounds/drawer_open_05.ogg:src/assets/sounds/drawer_open_05.ogg
    assets/sounds/drawer_silverware_close.ogg:src/assets/sounds/drawer_silverware_close.ogg
    assets/sounds/drawer_silverware_open.ogg:src/assets/sounds/drawer_silverware_open.ogg
    assets/sounds/drawer_squeaky_handle.ogg:src/assets/sounds/drawer_squeaky_handle.ogg
    assets/sounds/drawer_wooden.ogg:src/assets/sounds/drawer_wooden.ogg
    assets/sounds/DVD_player_tray_close.ogg:src/assets/sounds/DVD_player_tray_close.ogg
    assets/sounds/DVD_player_tray_open.ogg:src/assets/sounds/DVD_player_tray_open.ogg
    assets/sounds/fan_LOOP_01.ogg:src/assets/sounds/fan_LOOP_01.ogg
    assets/sounds/fan_on_off.ogg:src/assets/sounds/fan_on_off.ogg
    assets/sounds/fire_firepalce_LOOP_01.ogg:src/assets/sounds/fire_firepalce_LOOP_01.ogg
    assets/sounds/flamethrower_LOOP_01.ogg:src/assets/sounds/flamethrower_LOOP_01.ogg
    assets/sounds/flute_overblown.ogg:src/assets/sounds/flute_overblown.ogg
    assets/sounds/food_cereal_pour_01.ogg:src/assets/sounds/food_cereal_pour_01.ogg
    assets/sounds/food_cereal_pour_02.ogg:src/assets/sounds/food_cereal_pour_02.ogg
    assets/sounds/food_chewing_LOOP.ogg:src/assets/sounds/food_chewing_LOOP.ogg
    assets/sounds/food_chips_crunch_01.ogg:src/assets/sounds/food_chips_crunch_01.ogg
    assets/sounds/food_chips_crunch_02.ogg:src/assets/sounds/food_chips_crunch_02.ogg
    assets/sounds/food_chips_crunch_x3_01.ogg:src/assets/sounds/food_chips_crunch_x3_01.ogg
    assets/sounds/food_chips_crunch_x3_02.ogg:src/assets/sounds/food_chips_crunch_x3_02.ogg
    assets/sounds/food_egg_shell.ogg:src/assets/sounds/food_egg_shell.ogg
    assets/sounds/food_icemaker_01.ogg:src/assets/sounds/food_icemaker_01.ogg
    assets/sounds/food_soda_open_01.ogg:src/assets/sounds/food_soda_open_01.ogg
    assets/sounds/food_soda_open_02.ogg:src/assets/sounds/food_soda_open_02.ogg
    assets/sounds/food_soda_open_03.ogg:src/assets/sounds/food_soda_open_03.ogg
    assets/sounds/footsteps_outdoor_boots.ogg:src/assets/sounds/footsteps_outdoor_boots.ogg
    assets/sounds/footsteps_outdoor_boots_on_wood.ogg:src/assets/sounds/footsteps_outdoor_boots_on_wood.ogg
    assets/sounds/footsteps_shoes_fast_01.ogg:src/assets/sounds/footsteps_shoes_fast_01.ogg
    assets/sounds/footsteps_shoes_on_wood_01.ogg:src/assets/sounds/footsteps_shoes_on_wood_01.ogg
    assets/sounds/footsteps_shoes_on_wood_02.ogg:src/assets/sounds/footsteps_shoes_on_wood_02.ogg
    assets/sounds/footsteps_snow_01.ogg:src/assets/sounds/footsteps_snow_01.ogg
    assets/sounds/footsteps_snow_02.ogg:src/assets/sounds/footsteps_snow_02.ogg
    assets/sounds/footsteps_soft_fast.ogg:src/assets/sounds/footsteps_soft_fast.ogg
    assets/sounds/footsteps_stair_ascent_creaky.ogg:src/assets/sounds/footsteps_stair_ascent_creaky.ogg
    assets/sounds/footsteps_water_01.ogg:src/assets/sounds/footsteps_water_01.ogg
    assets/sounds/footsteps_water_02.ogg:src/assets/sounds/footsteps_water_02.ogg
    assets/sounds/glass_break_01.ogg:src/assets/sounds/glass_break_01.ogg
    assets/sounds/glass_break_02.ogg:src/assets/sounds/glass_break_02.ogg
    assets/sounds/glass_break_03.ogg:src/assets/sounds/glass_break_03.ogg
    assets/sounds/glass_break_04.ogg:src/assets/sounds/glass_break_04.ogg
    assets/sounds/glass_break_05.ogg:src/assets/sounds/glass_break_05.ogg
    assets/sounds/glass_ping.ogg:src/assets/sounds/glass_ping.ogg
    assets/sounds/gong_01.ogg:src/assets/sounds/gong_01.ogg
    assets/sounds/gong_02.ogg:src/assets/sounds/gong_02.ogg
    assets/sounds/gong_03.ogg:src/assets/sounds/gong_03.ogg
    assets/sounds/helicopter_LOOP_01.ogg:src/assets/sounds/helicopter_LOOP_01.ogg
    assets/sounds/jackhammer_01.ogg:src/assets/sounds/jackhammer_01.ogg
    assets/sounds/jackhammer_02.ogg:src/assets/sounds/jackhammer_02.ogg
    assets/sounds/jackhammer_03.ogg:src/assets/sounds/jackhammer_03.ogg
    assets/sounds/keys_01.ogg:src/assets/sounds/keys_01.ogg
    assets/sounds/keys_02.ogg:src/assets/sounds/keys_02.ogg
    assets/sounds/keys_03.ogg:src/assets/sounds/keys_03.ogg
    assets/sounds/knife_scrape_01.ogg:src/assets/sounds/knife_scrape_01.ogg
    assets/sounds/knife_scrape_02.ogg:src/assets/sounds/knife_scrape_02.ogg
    assets/sounds/knife_scrape_03.ogg:src/assets/sounds/knife_scrape_03.ogg
    assets/sounds/knife_scrape_04.ogg:src/assets/sounds/knife_scrape_04.ogg
    assets/sounds/lawnmower_LOOP_01.ogg:src/assets/sounds/lawnmower_LOOP_01.ogg
    assets/sounds/lawnmower_LOOP_02.ogg:src/assets/sounds/lawnmower_LOOP_02.ogg
    assets/sounds/liquid_slosh_01.ogg:src/assets/sounds/liquid_slosh_01.ogg
    assets/sounds/liquid_slosh_02.ogg:src/assets/sounds/liquid_slosh_02.ogg
    assets/sounds/liquid_slosh_03.ogg:src/assets/sounds/liquid_slosh_03.ogg
    assets/sounds/metal_clunk_01.ogg:src/assets/sounds/metal_clunk_01.ogg
    assets/sounds/metal_clunk_02.ogg:src/assets/sounds/metal_clunk_02.ogg
    assets/sounds/metal_hit_01.ogg:src/assets/sounds/metal_hit_01.ogg
    assets/sounds/metal_hit_02.ogg:src/assets/sounds/metal_hit_02.ogg
    assets/sounds/metal_hit_03.ogg:src/assets/sounds/metal_hit_03.ogg
    assets/sounds/metal_hit_04.ogg:src/assets/sounds/metal_hit_04.ogg
    assets/sounds/metal_hit_05.ogg:src/assets/sounds/metal_hit_05.ogg
    assets/sounds/metal_hit_06.ogg:src/assets/sounds/metal_hit_06.ogg
    assets/sounds/metal_rusty_squeak_01.ogg:src/assets/sounds/metal_rusty_squeak_01.ogg
    assets/sounds/metal_rusty_squeak_02.ogg:src/assets/sounds/metal_rusty_squeak_02.ogg
    assets/sounds/metal_rusty_squeak_03.ogg:src/assets/sounds/metal_rusty_squeak_03.ogg
    assets/sounds/metal_rusty_squeak_04.ogg:src/assets/sounds/metal_rusty_squeak_04.ogg
    assets/sounds/metal_rusty_squeak_05.ogg:src/assets/sounds/metal_rusty_squeak_05.ogg
    assets/sounds/metal_small_drop_01.ogg:src/assets/sounds/metal_small_drop_01.ogg
    assets/sounds/metal_small_drop_02.ogg:src/assets/sounds/metal_small_drop_02.ogg
    assets/sounds/motor_electric_small_01.ogg:src/assets/sounds/motor_electric_small_01.ogg
    assets/sounds/motor_electric_small_02.ogg:src/assets/sounds/motor_electric_small_02.ogg
    assets/sounds/motor_electric_small_03.ogg:src/assets/sounds/motor_electric_small_03.ogg
    assets/sounds/motor_electric_small_04.ogg:src/assets/sounds/motor_electric_small_04.ogg
    assets/sounds/motor_electric_small_LOOP.ogg:src/assets/sounds/motor_electric_small_LOOP.ogg
    assets/sounds/motor_gasoline_powered_LOOP.ogg:src/assets/sounds/motor_gasoline_powered_LOOP.ogg
    assets/sounds/motor_powerdown_long.ogg:src/assets/sounds/motor_powerdown_long.ogg
    assets/sounds/motor_washing_machine_LOOP_01.ogg:src/assets/sounds/motor_washing_machine_LOOP_01.ogg
    assets/sounds/motor_washing_machine_LOOP_02.ogg:src/assets/sounds/motor_washing_machine_LOOP_02.ogg
    assets/sounds/motor_washing_machine_LOOP_03.ogg:src/assets/sounds/motor_washing_machine_LOOP_03.ogg
    assets/sounds/paper_crumple_01.ogg:src/assets/sounds/paper_crumple_01.ogg
    assets/sounds/paper_crumple_02.ogg:src/assets/sounds/paper_crumple_02.ogg
    assets/sounds/paper_money_bill_flip.ogg:src/assets/sounds/paper_money_bill_flip.ogg
    assets/sounds/paper_money_bills_flip_x7.ogg:src/assets/sounds/paper_money_bills_flip_x7.ogg
    assets/sounds/paper_page_turn_01.ogg:src/assets/sounds/paper_page_turn_01.ogg
    assets/sounds/paper_page_turn_02.ogg:src/assets/sounds/paper_page_turn_02.ogg
    assets/sounds/paper_page_turn_03.ogg:src/assets/sounds/paper_page_turn_03.ogg
    assets/sounds/paper_page_turn_04.ogg:src/assets/sounds/paper_page_turn_04.ogg
    assets/sounds/paper_shuffle_01.ogg:src/assets/sounds/paper_shuffle_01.ogg
    assets/sounds/paper_shuffle_02.ogg:src/assets/sounds/paper_shuffle_02.ogg
    assets/sounds/paper_tear_01.ogg:src/assets/sounds/paper_tear_01.ogg
    assets/sounds/paper_tear_02.ogg:src/assets/sounds/paper_tear_02.ogg
    assets/sounds/paper_tear_03.ogg:src/assets/sounds/paper_tear_03.ogg
    assets/sounds/paper_tear_04.ogg:src/assets/sounds/paper_tear_04.ogg
    assets/sounds/paper_tear_05.ogg:src/assets/sounds/paper_tear_05.ogg
    assets/sounds/plastic_squeak_01.ogg:src/assets/sounds/plastic_squeak_01.ogg
    assets/sounds/plastic_squeak_02.ogg:src/assets/sounds/plastic_squeak_02.ogg
    assets/sounds/plastic_squeak_03.ogg:src/assets/sounds/plastic_squeak_03.ogg
    assets/sounds/radio_static_01.ogg:src/assets/sounds/radio_static_01.ogg
    assets/sounds/radio_static_02.ogg:src/assets/sounds/radio_static_02.ogg
    assets/sounds/radio_static_03.ogg:src/assets/sounds/radio_static_03.ogg
    assets/sounds/radio_static_04.ogg:src/assets/sounds/radio_static_04.ogg
    assets/sounds/razor_01.ogg:src/assets/sounds/razor_01.ogg
    assets/sounds/razor_02.ogg:src/assets/sounds/razor_02.ogg
    assets/sounds/scissors_snip_01.ogg:src/assets/sounds/scissors_snip_01.ogg
    assets/sounds/scissors_snip_02.ogg:src/assets/sounds/scissors_snip_02.ogg
    assets/sounds/scissors_snips_x4.ogg:src/assets/sounds/scissors_snips_x4.ogg
    assets/sounds/scissors_snips_x8.ogg:src/assets/sounds/scissors_snips_x8.ogg
    assets/sounds/scrape_stone_01.ogg:src/assets/sounds/scrape_stone_01.ogg
    assets/sounds/scrape_stone_02.ogg:src/assets/sounds/scrape_stone_02.ogg
    assets/sounds/scrape_wood_01.ogg:src/assets/sounds/scrape_wood_01.ogg
    assets/sounds/scrape_wood_02.ogg:src/assets/sounds/scrape_wood_02.ogg
    assets/sounds/scrape_wood_03.ogg:src/assets/sounds/scrape_wood_03.ogg
    assets/sounds/soap_hand_washing_01.ogg:src/assets/sounds/soap_hand_washing_01.ogg
    assets/sounds/soap_hand_washing_02.ogg:src/assets/sounds/soap_hand_washing_02.ogg
    assets/sounds/spray_aerosol_shake_01.ogg:src/assets/sounds/spray_aerosol_shake_01.ogg
    assets/sounds/spray_aerosol_shake_02.ogg:src/assets/sounds/spray_aerosol_shake_02.ogg
    assets/sounds/spray_aerosol_spray_01.ogg:src/assets/sounds/spray_aerosol_spray_01.ogg
    assets/sounds/spray_aerosol_spray_02.ogg:src/assets/sounds/spray_aerosol_spray_02.ogg
    assets/sounds/spray_aerosol_spray_03.ogg:src/assets/sounds/spray_aerosol_spray_03.ogg
    assets/sounds/spray_cleanser_01.ogg:src/assets/sounds/spray_cleanser_01.ogg
    assets/sounds/spray_cleanser_02.ogg:src/assets/sounds/spray_cleanser_02.ogg
    assets/sounds/spray_cleanser_03.ogg:src/assets/sounds/spray_cleanser_03.ogg
    assets/sounds/spray_hand_pump_small.ogg:src/assets/sounds/spray_hand_pump_small.ogg
    assets/sounds/spring_01.ogg:src/assets/sounds/spring_01.ogg
    assets/sounds/spring_02.ogg:src/assets/sounds/spring_02.ogg
    assets/sounds/squishy_thing_01.ogg:src/assets/sounds/squishy_thing_01.ogg
    assets/sounds/squishy_thing_02.ogg:src/assets/sounds/squishy_thing_02.ogg
    assets/sounds/squishy_thing_03.ogg:src/assets/sounds/squishy_thing_03.ogg
    assets/sounds/squishy_thing_04.ogg:src/assets/sounds/squishy_thing_04.ogg
    assets/sounds/squishy_thing_05.ogg:src/assets/sounds/squishy_thing_05.ogg
    assets/sounds/squishy_thing_06.ogg:src/assets/sounds/squishy_thing_06.ogg
    assets/sounds/squishy_thing_07.ogg:src/assets/sounds/squishy_thing_07.ogg
    assets/sounds/squishy_thing_08.ogg:src/assets/sounds/squishy_thing_08.ogg
    assets/sounds/squishy_thing_09.ogg:src/assets/sounds/squishy_thing_09.ogg
    assets/sounds/squishy_thing_10.ogg:src/assets/sounds/squishy_thing_10.ogg
    assets/sounds/stapler_open.ogg:src/assets/sounds/stapler_open.ogg
    assets/sounds/stapler_staple_01.ogg:src/assets/sounds/stapler_staple_01.ogg
    assets/sounds/stapler_staple_02.ogg:src/assets/sounds/stapler_staple_02.ogg
    assets/sounds/stapler_staple_03.ogg:src/assets/sounds/stapler_staple_03.ogg
    assets/sounds/tape_duct_pulloff_01.ogg:src/assets/sounds/tape_duct_pulloff_01.ogg
    assets/sounds/tape_duct_pulloff_02.ogg:src/assets/sounds/tape_duct_pulloff_02.ogg
    assets/sounds/tape_duct_pulloff_03.ogg:src/assets/sounds/tape_duct_pulloff_03.ogg
    assets/sounds/tape_duct_pulloff_04.ogg:src/assets/sounds/tape_duct_pulloff_04.ogg
    assets/sounds/tape_duct_pulloff_05.ogg:src/assets/sounds/tape_duct_pulloff_05.ogg
    assets/sounds/tape_duct_rip_01.ogg:src/assets/sounds/tape_duct_rip_01.ogg
    assets/sounds/tape_duct_rip_02.ogg:src/assets/sounds/tape_duct_rip_02.ogg
    assets/sounds/tape_duct_rip_03.ogg:src/assets/sounds/tape_duct_rip_03.ogg
    assets/sounds/tape_duct_rip_04.ogg:src/assets/sounds/tape_duct_rip_04.ogg
    assets/sounds/tape_scotch_pulloff_01.ogg:src/assets/sounds/tape_scotch_pulloff_01.ogg
    assets/sounds/tape_scotch_pulloff_02.ogg:src/assets/sounds/tape_scotch_pulloff_02.ogg
    assets/sounds/tape_scotch_pull_rip.ogg:src/assets/sounds/tape_scotch_pull_rip.ogg
    assets/sounds/tape_scotch_rip.ogg:src/assets/sounds/tape_scotch_rip.ogg
    assets/sounds/telephone_cellular_ring_01.ogg:src/assets/sounds/telephone_cellular_ring_01.ogg
    assets/sounds/telephone_cellular_ring_02.ogg:src/assets/sounds/telephone_cellular_ring_02.ogg
    assets/sounds/telephone_cellular_vibrate.ogg:src/assets/sounds/telephone_cellular_vibrate.ogg
    assets/sounds/telephone_dial_tone_LOOP.ogg:src/assets/sounds/telephone_dial_tone_LOOP.ogg
    assets/sounds/telephone_number_disconnected_tone.ogg:src/assets/sounds/telephone_number_disconnected_tone.ogg
    assets/sounds/telephone_out_of_service.ogg:src/assets/sounds/telephone_out_of_service.ogg
    assets/sounds/telephone_ringing_01.ogg:src/assets/sounds/telephone_ringing_01.ogg
    assets/sounds/telephone_ringing_02.ogg:src/assets/sounds/telephone_ringing_02.ogg
    assets/sounds/telephone_ringing_03.ogg:src/assets/sounds/telephone_ringing_03.ogg
    assets/sounds/thud_01.ogg:src/assets/sounds/thud_01.ogg
    assets/sounds/thud_02.ogg:src/assets/sounds/thud_02.ogg
    assets/sounds/thud_03.ogg:src/assets/sounds/thud_03.ogg
    assets/sounds/thud_04.ogg:src/assets/sounds/thud_04.ogg
    assets/sounds/thud_05.ogg:src/assets/sounds/thud_05.ogg
    assets/sounds/thud_06.ogg:src/assets/sounds/thud_06.ogg
    assets/sounds/thud_07.ogg:src/assets/sounds/thud_07.ogg
    assets/sounds/thud_08.ogg:src/assets/sounds/thud_08.ogg
    assets/sounds/thud_09.ogg:src/assets/sounds/thud_09.ogg
    assets/sounds/tissue_pulled_from_box.ogg:src/assets/sounds/tissue_pulled_from_box.ogg
    assets/sounds/toilet_flush_01.ogg:src/assets/sounds/toilet_flush_01.ogg
    assets/sounds/toilet_flush_02.ogg:src/assets/sounds/toilet_flush_02.ogg
    assets/sounds/tool_drill_02.ogg:src/assets/sounds/tool_drill_02.ogg
    assets/sounds/tool_drill.ogg:src/assets/sounds/tool_drill.ogg
    assets/sounds/tool_hammer_01.ogg:src/assets/sounds/tool_hammer_01.ogg
    assets/sounds/tool_hammer_02.ogg:src/assets/sounds/tool_hammer_02.ogg
    assets/sounds/tool_hammer_03.ogg:src/assets/sounds/tool_hammer_03.ogg
    assets/sounds/tool_hammer_x7.ogg:src/assets/sounds/tool_hammer_x7.ogg
    assets/sounds/tool_hedgeclipper.ogg:src/assets/sounds/tool_hedgeclipper.ogg
    assets/sounds/tool_jigsaw.ogg:src/assets/sounds/tool_jigsaw.ogg
    assets/sounds/tool_powersaw_01.ogg:src/assets/sounds/tool_powersaw_01.ogg
    assets/sounds/tool_powersaw_02.ogg:src/assets/sounds/tool_powersaw_02.ogg
    assets/sounds/tool_powersaw_LOOP.ogg:src/assets/sounds/tool_powersaw_LOOP.ogg
    assets/sounds/tool_saw_01.ogg:src/assets/sounds/tool_saw_01.ogg
    assets/sounds/tool_saw_02.ogg:src/assets/sounds/tool_saw_02.ogg
    assets/sounds/tool_saw_03.ogg:src/assets/sounds/tool_saw_03.ogg
    assets/sounds/tool_saw_LOOP_01.ogg:src/assets/sounds/tool_saw_LOOP_01.ogg
    assets/sounds/tool_saw_LOOP_02.ogg:src/assets/sounds/tool_saw_LOOP_02.ogg
    assets/sounds/tool_staplegun.ogg:src/assets/sounds/tool_staplegun.ogg
    assets/sounds/toothbrush_brushing_teeth_01.ogg:src/assets/sounds/toothbrush_brushing_teeth_01.ogg
    assets/sounds/toothbrush_brushing_teeth_02.ogg:src/assets/sounds/toothbrush_brushing_teeth_02.ogg
    assets/sounds/VCR_tape_eject.ogg:src/assets/sounds/VCR_tape_eject.ogg
    assets/sounds/VCR_tape_insert.ogg:src/assets/sounds/VCR_tape_insert.ogg
    assets/sounds/VCR_tape_out_of_sleeve.ogg:src/assets/sounds/VCR_tape_out_of_sleeve.ogg
    assets/sounds/VCR_tape_rewind_LOOP.ogg:src/assets/sounds/VCR_tape_rewind_LOOP.ogg
    assets/sounds/vehicle_construction_backup_beep_LOOP.ogg:src/assets/sounds/vehicle_construction_backup_beep_LOOP.ogg
    assets/sounds/vehicle_door_lock_01.ogg:src/assets/sounds/vehicle_door_lock_01.ogg
    assets/sounds/vehicle_door_open_01.ogg:src/assets/sounds/vehicle_door_open_01.ogg
    assets/sounds/vehicle_door_shut_01.ogg:src/assets/sounds/vehicle_door_shut_01.ogg
    assets/sounds/vehicle_door_shut_02.ogg:src/assets/sounds/vehicle_door_shut_02.ogg
    assets/sounds/vehicle_door_shut_03.ogg:src/assets/sounds/vehicle_door_shut_03.ogg
    assets/sounds/vehicle_door_shut_04.ogg:src/assets/sounds/vehicle_door_shut_04.ogg
    assets/sounds/vehicle_door_shut_05.ogg:src/assets/sounds/vehicle_door_shut_05.ogg
    assets/sounds/vehicle_engine_idle_LOOP_01.ogg:src/assets/sounds/vehicle_engine_idle_LOOP_01.ogg
    assets/sounds/vehicle_engine_idle_LOOP_02.ogg:src/assets/sounds/vehicle_engine_idle_LOOP_02.ogg
    assets/sounds/vehicle_engine_rev_01.ogg:src/assets/sounds/vehicle_engine_rev_01.ogg
    assets/sounds/vehicle_ignition_01.ogg:src/assets/sounds/vehicle_ignition_01.ogg
    assets/sounds/vehicle_ignition_02.ogg:src/assets/sounds/vehicle_ignition_02.ogg
    assets/sounds/vehicle_tree_shredder_LOOP.ogg:src/assets/sounds/vehicle_tree_shredder_LOOP.ogg
    assets/sounds/vehicle_tree_shredder.ogg:src/assets/sounds/vehicle_tree_shredder.ogg
    assets/sounds/vehicle_turn_signal_01.ogg:src/assets/sounds/vehicle_turn_signal_01.ogg
    assets/sounds/vehicle_van_hatch_01.ogg:src/assets/sounds/vehicle_van_hatch_01.ogg
    assets/sounds/vehicle_van_hatch_02.ogg:src/assets/sounds/vehicle_van_hatch_02.ogg
    assets/sounds/vehicle_van_hatch_03.ogg:src/assets/sounds/vehicle_van_hatch_03.ogg
    assets/sounds/water_drain_01.ogg:src/assets/sounds/water_drain_01.ogg
    assets/sounds/water_drain_02.ogg:src/assets/sounds/water_drain_02.ogg
    assets/sounds/water_drain_03.ogg:src/assets/sounds/water_drain_03.ogg
    assets/sounds/water_drain_LOOP.ogg:src/assets/sounds/water_drain_LOOP.ogg
    assets/sounds/water_faucet_01.ogg:src/assets/sounds/water_faucet_01.ogg
    assets/sounds/water_faucet_02.ogg:src/assets/sounds/water_faucet_02.ogg
    assets/sounds/water_faucet_03.ogg:src/assets/sounds/water_faucet_03.ogg
    assets/sounds/water_faucet_LOOP_01.ogg:src/assets/sounds/water_faucet_LOOP_01.ogg
    assets/sounds/water_faucet_LOOP_02.ogg:src/assets/sounds/water_faucet_LOOP_02.ogg
    assets/sounds/water_faucet_old_leaky.ogg:src/assets/sounds/water_faucet_old_leaky.ogg
    assets/sounds/water_faucet_quiet_01.ogg:src/assets/sounds/water_faucet_quiet_01.ogg
    assets/sounds/water_glass_filling_up_02.ogg:src/assets/sounds/water_glass_filling_up_02.ogg
    assets/sounds/water_glass_filling_up_03.ogg:src/assets/sounds/water_glass_filling_up_03.ogg
    assets/sounds/water_glass_filling_up.ogg:src/assets/sounds/water_glass_filling_up.ogg
    assets/sounds/water_movement_01.ogg:src/assets/sounds/water_movement_01.ogg
    assets/sounds/water_movement_02.ogg:src/assets/sounds/water_movement_02.ogg
    assets/sounds/water_poured_out_01.ogg:src/assets/sounds/water_poured_out_01.ogg
    assets/sounds/water_poured_out_02.ogg:src/assets/sounds/water_poured_out_02.ogg
    assets/sounds/water_shake.ogg:src/assets/sounds/water_shake.ogg
    assets/sounds/water_sink_filling.ogg:src/assets/sounds/water_sink_filling.ogg
    assets/sounds/water_washing_machine_fill-up_LOOP.ogg:src/assets/sounds/water_washing_machine_fill-up_LOOP.ogg
    assets/sounds/weather_rainfall.ogg:src/assets/sounds/weather_rainfall.ogg
    assets/sounds/wood_break_01.ogg:src/assets/sounds/wood_break_01.ogg
    assets/sounds/wood_break_02.ogg:src/assets/sounds/wood_break_02.ogg
    assets/sounds/wood_break_03.ogg:src/assets/sounds/wood_break_03.ogg
    assets/sounds/wood_break_drop_01.ogg:src/assets/sounds/wood_break_drop_01.ogg
    assets/sounds/wood_break_drop_02.ogg:src/assets/sounds/wood_break_drop_02.ogg
    assets/sounds/wood_break_drop_03.ogg:src/assets/sounds/wood_break_drop_03.ogg
    assets/sounds/wood_break_drop_04.ogg:src/assets/sounds/wood_break_drop_04.ogg
    assets/sounds/wood_break_drop_05.ogg:src/assets/sounds/wood_break_drop_05.ogg
    assets/sounds/wood_break_drop_06.ogg:src/assets/sounds/wood_break_drop_06.ogg
    assets/sounds/wood_creak_01.ogg:src/assets/sounds/wood_creak_01.ogg
    assets/sounds/wood_creak_02.ogg:src/assets/sounds/wood_creak_02.ogg
    assets/sounds/wood_creak_03.ogg:src/assets/sounds/wood_creak_03.ogg
    assets/sounds/wood_snap_01.ogg:src/assets/sounds/wood_snap_01.ogg
    assets/sounds/writing_inkpen_01.ogg:src/assets/sounds/writing_inkpen_01.ogg
    assets/sounds/writing_pencil_01.ogg:src/assets/sounds/writing_pencil_01.ogg
    assets/sounds/writing_pencil_02.ogg:src/assets/sounds/writing_pencil_02.ogg
    assets/sounds/writing_pencil_03.ogg:src/assets/sounds/writing_pencil_03.ogg
    assets/sounds/writing_pencil_eraser_01.ogg:src/assets/sounds/writing_pencil_eraser_01.ogg
    assets/sounds/writing_pencil_eraser_02.ogg:src/assets/sounds/writing_pencil_eraser_02.ogg
    assets/sounds/writing_quill_pen_01.ogg:src/assets/sounds/writing_quill_pen_01.ogg
    assets/sounds/writing_quill_pen_02.ogg:src/assets/sounds/writing_quill_pen_02.ogg
    assets/sounds/zipper_01.ogg:src/assets/sounds/zipper_01.ogg
    assets/sounds/zipper_02.ogg:src/assets/sounds/zipper_02.ogg
    assets/sounds/zipper_03.ogg:src/assets/sounds/zipper_03.ogg
    assets/sounds/zipper_04.ogg:src/assets/sounds/zipper_04.ogg
    assets/fonts/ConnectionIi-2wj8.otf:src/assets/fonts/ConnectionIi-2wj8.otf
    assets/fonts/KodomoRounded.otf:src/assets/fonts/KodomoRounded.otf
    assets/fonts/RampartOne-Regular.ttf:src/assets/fonts/RampartOne-Regular.ttf
    assets/fonts/freefont/FreeSerifItalic.ttf:src/assets/fonts/freefont/FreeSerifItalic.ttf
    assets/fonts/freefont/FreeMono.ttf:src/assets/fonts/freefont/FreeMono.ttf
    assets/fonts/freefont/FreeSerifBoldItalic.ttf:src/assets/fonts/freefont/FreeSerifBoldItalic.ttf
    assets/fonts/freefont/FreeMonoBold.ttf:src/assets/fonts/freefont/FreeMonoBold.ttf
    assets/fonts/freefont/FreeSansOblique.ttf:src/assets/fonts/freefont/FreeSansOblique.ttf
    assets/fonts/freefont/FreeSerifBold.ttf:src/assets/fonts/freefont/FreeSerifBold.ttf
    assets/fonts/freefont/FreeSans.ttf:src/assets/fonts/freefont/FreeSans.ttf
    assets/fonts/freefont/FreeSerif.ttf:src/assets/fonts/freefont/FreeSerif.ttf
    assets/fonts/freefont/FreeMonoBoldOblique.ttf:src/assets/fonts/freefont/FreeMonoBoldOblique.ttf
    assets/fonts/freefont/FreeSansBoldOblique.ttf:src/assets/fonts/freefont/FreeSansBoldOblique.ttf
    assets/fonts/freefont/FreeMonoOblique.ttf:src/assets/fonts/freefont/FreeMonoOblique.ttf
    assets/fonts/freefont/FreeSansBold.ttf:src/assets/fonts/freefont/FreeSansBold.ttf
    assets/images/Spritesheet/wall_spritesheet.png:src/assets/images/Spritesheet/wall_spritesheet.png
    assets/images/Spritesheet/wall_round_spritesheet.png:src/assets/images/Spritesheet/wall_round_spritesheet.png
    assets/images/Spritesheet/boxes_spritesheet.png:src/assets/images/Spritesheet/boxes_spritesheet.png
    assets/images/Spritesheet/character_spritesheet.png:src/assets/images/Spritesheet/character_spritesheet.png
    assets/images/Spritesheet/ground_spritesheet.png:src/assets/images/Spritesheet/ground_spritesheet.png
    assets/images/Spritesheet/ground_gravel_spritesheet.png:src/assets/images/Spritesheet/ground_gravel_spritesheet.png
    assets/images/Spritesheet/sprites.png:src/assets/images/Spritesheet/sprites.png
    assets/images/Spritesheet/platforms_spritesheet.png:src/assets/images/Spritesheet/platforms_spritesheet.png
    assets/images/Sample_Sokoban.png:src/assets/images/Sample_Sokoban.png
    assets/images/PNG/CrateDark_Yellow.png:src/assets/images/PNG/CrateDark_Yellow.png
    assets/images/PNG/Ground_Sand.png:src/assets/images/PNG/Ground_Sand.png
    assets/images/PNG/EndPoint_Beige.png:src/assets/images/PNG/EndPoint_Beige.png
    assets/images/PNG/Crate_Gray.png:src/assets/images/PNG/Crate_Gray.png
    assets/images/PNG/Wall_Beige.png:src/assets/images/PNG/Wall_Beige.png
    assets/images/PNG/Character8.png:src/assets/images/PNG/Character8.png
    assets/images/PNG/Ground_Grass.png:src/assets/images/PNG/Ground_Grass.png
    assets/images/PNG/Wall_Brown.png:src/assets/images/PNG/Wall_Brown.png
    assets/images/PNG/EndPoint_Red.png:src/assets/images/PNG/EndPoint_Red.png
    assets/images/PNG/EndPoint_Purple.png:src/assets/images/PNG/EndPoint_Purple.png
    assets/images/PNG/EndPoint_Yellow.png:src/assets/images/PNG/EndPoint_Yellow.png
    assets/images/PNG/Crate_Beige.png:src/assets/images/PNG/Crate_Beige.png
    assets/images/PNG/CrateDark_Brown.png:src/assets/images/PNG/CrateDark_Brown.png
    assets/images/PNG/CrateDark_Purple.png:src/assets/images/PNG/CrateDark_Purple.png
    assets/images/PNG/Character6.png:src/assets/images/PNG/Character6.png
    assets/images/PNG/Crate_Black.png:src/assets/images/PNG/Crate_Black.png
    assets/images/PNG/Ground_Concrete.png:src/assets/images/PNG/Ground_Concrete.png
    assets/images/PNG/Wall_Black.png:src/assets/images/PNG/Wall_Black.png
    assets/images/PNG/EndPoint_Gray.png:src/assets/images/PNG/EndPoint_Gray.png
    assets/images/PNG/GroundGravel_Sand.png:src/assets/images/PNG/GroundGravel_Sand.png
    assets/images/PNG/Character4.png:src/assets/images/PNG/Character4.png
    assets/images/PNG/Crate_Red.png:src/assets/images/PNG/Crate_Red.png
    assets/images/PNG/WallRound_Brown.png:src/assets/images/PNG/WallRound_Brown.png
    assets/images/PNG/WallRound_Beige.png:src/assets/images/PNG/WallRound_Beige.png
    assets/images/PNG/EndPoint_Brown.png:src/assets/images/PNG/EndPoint_Brown.png
    assets/images/PNG/Ground_Dirt.png:src/assets/images/PNG/Ground_Dirt.png
    assets/images/PNG/Character9.png:src/assets/images/PNG/Character9.png
    assets/images/PNG/Character10.png:src/assets/images/PNG/Character10.png
    assets/images/PNG/Wall_Gray.png:src/assets/images/PNG/Wall_Gray.png
    assets/images/PNG/EndPoint_Blue.png:src/assets/images/PNG/EndPoint_Blue.png
    assets/images/PNG/WallRound_Black.png:src/assets/images/PNG/WallRound_Black.png
    assets/images/PNG/Crate_Blue.png:src/assets/images/PNG/Crate_Blue.png
    assets/images/PNG/Character1.png:src/assets/images/PNG/Character1.png
    assets/images/PNG/GroundGravel_Grass.png:src/assets/images/PNG/GroundGravel_Grass.png
    assets/images/PNG/Character5.png:src/assets/images/PNG/Character5.png
    assets/images/PNG/Character3.png:src/assets/images/PNG/Character3.png
    assets/images/PNG/Character2.png:src/assets/images/PNG/Character2.png
    assets/images/PNG/CrateDark_Red.png:src/assets/images/PNG/CrateDark_Red.png
    assets/images/PNG/WallRound_Gray.png:src/assets/images/PNG/WallRound_Gray.png
    assets/images/PNG/EndPoint_Black.png:src/assets/images/PNG/EndPoint_Black.png
    assets/images/PNG/GroundGravel_Dirt.png:src/assets/images/PNG/GroundGravel_Dirt.png
    assets/images/PNG/CrateDark_Gray.png:src/assets/images/PNG/CrateDark_Gray.png
    assets/images/PNG/CrateDark_Beige.png:src/assets/images/PNG/CrateDark_Beige.png
    assets/images/PNG/Character7.png:src/assets/images/PNG/Character7.png
    assets/images/PNG/Crate_Yellow.png:src/assets/images/PNG/Crate_Yellow.png
    assets/images/PNG/Crate_Purple.png:src/assets/images/PNG/Crate_Purple.png
    assets/images/PNG/Crate_Brown.png:src/assets/images/PNG/Crate_Brown.png
    assets/images/PNG/CrateDark_Blue.png:src/assets/images/PNG/CrateDark_Blue.png
    assets/images/PNG/CrateDark_Black.png:src/assets/images/PNG/CrateDark_Black.png
    assets/images/PNG/GroundGravel_Concrete.png:src/assets/images/PNG/GroundGravel_Concrete.png
    assets/images/Buttons.png:src/assets/images/Buttons.png
    assets/images/Preview_Sokoban.png:src/assets/images/Preview_Sokoban.png
])

AC_OUTPUT
