include $(top_srcdir)/common.mk

noinst_LIBRARIES = libcore.a

libcore_a_SOURCES = actor.cpp actor.hpp
libcore_a_SOURCES += movable.cpp movable.hpp
libcore_a_SOURCES += box.cpp box.hpp
libcore_a_SOURCES += player.cpp player.hpp
libcore_a_SOURCES += platform.cpp platform.hpp
libcore_a_SOURCES += wall.cpp wall.hpp
libcore_a_SOURCES += board.cpp board.hpp
